- 상품상세 benefit info align fix

--- a/components/productdetail/ShippingBenefit.module.scss
+++ b/components/productdetail/ShippingBenefit.module.scss
@@ -155,6 +155,7 @@
 
     & .infoWrap {
       display: flex;
+      justify-content: flex-end;
       margin-bottom: 14px;
 
       & button {
@@ -168,6 +169,10 @@
         text-align: center;
         color: #ffffff;
         margin-right: 10px;
+
+        &:nth-child(2) {
+          margin-right: 0;
+        }
 
         @include break350 {
           width: 56px;
